src/components/Modal.css
.modal {
    color:white;
    text-shadow: 2px 2px 2px black;
}

.modal_overlay {
    position: fixed;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;

    background-color: rgba(0, 0, 0, 0.5);
    backdrop-filter: blur(5px);
}

.modal_content {
    position: fixed;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    background-color: rgb(50, 50, 50);
    border-radius: 5px;
    margin:25px;
    width:50%;
    height:50%;

    z-index: 10;
    object-fit: contain;
}

.button_tabs {
    position:fixed;
    left:0;
    top:0;
    width:50%;
    height:100%;
}

.content_button {
    cursor: pointer;
    display: flex;
    padding:5px;
    width:95%;
    height:1.75em;
    margin-left:5px;
    margin-right:5px;
    align-items: center;

    font-size: 1.2rem;
    text-align: left;
    background-color: rgba(35, 35, 35, 1);
    color: #fff;
    outline: none;
    border: none;
    font-weight: 400;
    border-radius: 0.2vw;

    transition-timing-function: ease-out;
    transition: all 0.25s;
}

.content_button.disabled {
    color:gray;
    cursor:not-allowed;
    pointer-events: none;
}

.content_button:hover {
    background-color: rgba(20, 20, 20, 1);
}

.content_area {
    position:fixed;
    right:0;
    top:0;
    width:50%;
    height:100%;
    overflow-y: scroll;
    scrollbar-width: 0;
}

.content_area::-webkit-scrollbar {
    display:none;
}

.modal_img_fade--fadeBottom {
    height: 2.5rem;

    background-image: linear-gradient(
        180deg,
        transparent,
        rgba(37, 37, 37, 0.61),
        #111
    );
    
}

.video_list {
    display:none;
}

.video_list.expanded {
    display:block;
    max-height: 250px;
    overflow-y: scroll;
    scrollbar-width: 2px;
    scrollbar-color: white rgba(25, 25, 25, 1);
    background-color: rgba(25, 25, 25, 1);  
    margin-left:5px;
    margin-right:3.5%;

    border-bottom-left-radius: 5px;
    border-bottom-right-radius: 5px;
}

.video_list.expanded ul {
    padding-inline-start: 40px;
}

.video_list.expanded li {
    list-style-type: none;
    padding:5px;
    
    transition-timing-function: ease-out;
    transition: all 0.25s;
}

.video_list.expanded li:hover {
    background-color: rgba(45, 45, 45, 1);
}

.video_list.expanded li a {
    display:block;
    text-decoration: none;
    color:white;
}

@media screen and (max-width: 768px) {
    .modal_content {
        position: absolute;
        transform: translate(-50%, -50%);
        background-color: rgb(50, 50, 50);
        border-radius: 5px;
        width:100%;
        height:50%;

        z-index: 10;
        object-fit: contain;       
    }
}

